specs/013-array-methods/examples/invalid/unknown-method.ts
let xs: int[] = [1, 2, 3];
let bad = xs.flatten((x: int) => x);
console.log(bad.length);
